--- a/style.css
+++ b/style.css
@@ -6,24 +6,42 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #111827;
   font-family: "Courier New", Courier, monospace;
 }
+.image-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  /* top: 20px; */
+  z-index: -1;
+}
+.image-container img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
 .container {
   width: 40%;
-  height: 180px;
+  height: auto;
   background-color: aliceblue;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.3);
+  margin-top: 275px;
 }
 .title {
   width: 100%;
   height: auto;
-  text-align: center;
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 h2 {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
@@ -55,6 +73,7 @@ button {
   border: none;
   background-color: deeppink;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 button:hover {
   background-color: #cccc00;
@@ -116,4 +135,15 @@ h3 {
 
 #namaKhodam {
   text-align: left;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 85%;
+    height: auto;
+  }
+  .modal-content {
+    width: 80%;
+    height: auto;
+  }
 }
