--- a/style.css
+++ b/style.css
@@ -79,7 +79,13 @@ button:hover {
   background-color: #cccc00;
   transition: 0.5s;
 }
-
+.labelFooter{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+}
 /* Gaya Modal */
 .modal {
   display: none;
