--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ button:hover {
   display: flex;
   justify-content:center;
   align-items: center;
+  position: absolute;
+  bottom:0px;
 }
 /* Gaya Modal */
 .modal {
