--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ button:hover {
   justify-content:center;
   align-items: center;
   position: absolute;
-  bottom:0px;
+  margin-bottom:0px;
 }
 /* Gaya Modal */
 .modal {
