--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body {
   width: 100%;
-  height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,13 +17,16 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
-  /* top: 20px; */
+  bottom: 0px;
   z-index: -1;
+  background-color: #cccc00;
+  height: 100vh;
 }
-.image-container img {
+img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
+  margin-bottom: 100px;
 }
 .container {
   width: 40%;
@@ -136,11 +139,16 @@ h3 {
 #namaKhodam {
   text-align: left;
 }
-
+footer {
+  position: absolute;
+  bottom: 0px;
+}
 @media (max-width: 768px) {
   .container {
     width: 85%;
     height: auto;
+    position: absolute;
+    top: 70px;
   }
   .modal-content {
     width: 80%;
